--- a/options.html
+++ b/options.html
@@ -1,60 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        span.optionsText {
-            font-size: medium;
-        }
-    </style>
+
 <head>
-    <title>Options</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Settings</title>
     <script src="options.js" defer></script>
 </head>
 
 <body>
-    <div>
-        <label>
-            <span>
+    <h1>Settings</h1>
+    <div class="options">
+        <div class="li">
+            <label>
                 <input type="checkbox" id="moveTabs" checked>
-            </span>
-            <span class="optionsText">
-                Move Tabs after deleting them from an already Opened Tab?
-            </span>
-        </label>
-    </div>
-    <div>
-        <label>
-            <span>
+                <span>Move tab after closing them from an already opened tab</span>
+            </label>
+        </div>
+        <div class="li">
+            <label>
                 <input type="checkbox" id="effectWindows">
-            </span>
-            <span class="optionsText">
-                Effect all windows
-            </span>
-        </label>
-    </div>
-    <div>
-        <label>
-            <span>
+                <span>Effect all windows</span>
+            </label>
+        </div>
+        <div class="li">
+            <label>
                 <input type="checkbox" id="effectTabGroups">
-            </span>
-            <span class="optionsText">
-                Effect all tab groups
-            </span>
-        </label>
-    </div>
-    <div>
-        <label>
-            <span class="optionsText">
-                Add to Exclusion List
-            </span>
-            <input type="text" id="exclusionArray" placeholder="Enter new Exclusion">
-            <br>
-            <ul class="optionsText" id="exclusions"></ul>
-        </label>
-    </div>
-    <div>
-        <label>
-            <button id="submit">Submit Changes</button>
-        </label>
+                <span>Effect all tab groups</span>
+            </label>
+        </div>
+        <div class="li">
+            <label>
+                <span>&nbspAdd to Exclusion List</span>
+                <input type="text" id="exclusionArray" placeholder="Enter new Exclusion">
+                <ul id="exclusions"></ul>
+            </label>
+        </div>
+        <div class="submit">
+            <label>
+                <button id="submit">Submit Changes</button>
+            </label>
+        </div>
     </div>
 </body>
 
