--- a/src/options.html
+++ b/src/options.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>Settings</title>
-    <script src="options.js" defer></script>
+    <script type="module" src="options.js" defer></script>
 </head>
 
 <body>
