Fix for options.html inheriting excess scripts from bundler and README changes

--- a/src/options.html
+++ b/src/options.html
@@ -18,13 +18,13 @@
         <div class="li">
             <label>
                 <input type="checkbox" id="effectWindows">
-                <span>Effect all windows</span>
+                <span>Detect duplicates between windows</span>
             </label>
         </div>
         <div class="li">
             <label>
                 <input type="checkbox" id="effectTabGroups">
-                <span>Effect all tab groups</span>
+                <span>Detect duplicates between tab groups</span>
             </label>
         </div>
         <div class="li">
