Added Webpack and reorganized code. (#7)
* Pushing files, minor changes

* Reorganizing for bundler, minor changes to package.json

* Added webpack bundler, minor changes

* Fix for options.html inheriting excess scripts from bundler and README changes

* Minor changes, webpack reorganized

--- a/src/options.html
+++ b/src/options.html
@@ -4,7 +4,6 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>Settings</title>
-    <script src="options.js" defer></script>
 </head>
 
 <body>
@@ -19,13 +18,13 @@
         <div class="li">
             <label>
                 <input type="checkbox" id="effectWindows">
-                <span>Effect all windows</span>
+                <span>Detect duplicates between windows</span>
             </label>
         </div>
         <div class="li">
             <label>
                 <input type="checkbox" id="effectTabGroups">
-                <span>Effect all tab groups</span>
+                <span>Detect duplicates between tab groups</span>
             </label>
         </div>
         <div class="li">
