--- a/src/options.html
+++ b/src/options.html
@@ -2,28 +2,27 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styles.css">
     <title>Settings</title>
 </head>
 
 <body>
-    <h1>Settings</h1>
+    <h1 style="text-align:center">Settings</h1>
     <div class="options">
         <div class="li">
-            <label>
-                <input type="checkbox" id="moveTabs" checked>
-                <span>Move tab after closing them from an already opened tab</span>
+            <label class="optionList">
+                <input type="checkbox" class="OptionBox" id="moveTabs" checked>
+                <span>Move Tabs</span>
             </label>
         </div>
         <div class="li">
-            <label>
-                <input type="checkbox" id="effectWindows">
+            <label class="optionList">
+                <input type="checkbox" class="OptionBox" id="effectWindows">
                 <span>Detect duplicates between windows</span>
             </label>
         </div>
         <div class="li">
-            <label>
-                <input type="checkbox" id="effectTabGroups">
+            <label class="optionList">
+                <input type="checkbox" class="OptionBox" id="effectTabGroups">
                 <span>Detect duplicates between tab groups</span>
             </label>
         </div>
@@ -32,11 +31,6 @@
                 <span>&nbspAdd to Exclusion List</span>
                 <input type="text" id="exclusionArray" placeholder="Enter new Exclusion">
                 <ul id="exclusions"></ul>
-            </label>
-        </div>
-        <div class="submit">
-            <label>
-                <button id="submit">Submit Changes</button>
             </label>
         </div>
     </div>
