Changed to popup page and some minor changes to background.js

--- a/src/options.html
+++ b/src/options.html
@@ -33,19 +33,19 @@
         <div class="optionPage" id="exclusionPage">
             <h1>Exclusions</h1>
             <div class="option">
-                <label class="exclusionTextBox">
+                <label class="inputBox">
                     <input type="text" id="exclusionArray" placeholder="Enter new Exclusion">
-                    <ul class="exclusionList" id="exclusions"></ul>
+                    <ul class="itemList" id="exclusions"></ul>
                 </label>
             </div>
         </div>
         <div class="optionPage" id="logPage">
             <h1>Log</h1>
             <div class="option">
-                <label class="logTextBox">
-                    <span>Number of urls to log: </span>
-                    <input type="number" id="numberOfUrls">
-                    <ul class="urlList" id="loggedUrls"></ul>
+                <label class="inputBox">
+                    <span class="logText">Number of urls to log: </span>
+                    <input type="number" id="logMaxUrls">
+                    <ul class="itemList" id="loggedUrls"></ul>
                 </label>
             </div>
         </div>
