support reopening tabs
some debugging info in background

reopen tabs within a grace period

remove webpack-merge, oops

fix pkg lock

lol, fix pkg lock so help me god

--- a/src/options.html
+++ b/src/options.html
@@ -29,6 +29,12 @@
                     <span>Detect duplicates between tab groups</span>
                 </label>
             </div>
+            <div class="option">
+                <label class="optionList">
+                    <span>Grace period to reopen a closed tab (in seconds)</span>
+                    <input type="number" id="closeGracePeriod">
+                </label>
+            </div>
         </div>
         <div class="optionPage" id="exclusionPage">
             <h1>Exclusions</h1>
